--- a/HotelFoodAndRoomServiceSystem/HotelFoodAndRoomServiceSystem.csproj
+++ b/HotelFoodAndRoomServiceSystem/HotelFoodAndRoomServiceSystem.csproj
@@ -120,9 +120,11 @@
   <ItemGroup>
     <Content Include="AdminDashboard.aspx" />
     <Content Include="AdminLogin.aspx" />
+    <Content Include="CssFiles\FoodService.css" />
     <Content Include="CssFiles\RoomService.css" />
     <Content Include="GuestLoginPage.aspx" />
     <Content Include="GuestDashboard.aspx" />
+    <Content Include="Hotel-FoodService.aspx" />
     <Content Include="Hotel-RoomService.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -154,6 +156,13 @@
     </Compile>
     <Compile Include="GuestDashboard.aspx.designer.cs">
       <DependentUpon>GuestDashboard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Hotel-FoodService.aspx.cs">
+      <DependentUpon>Hotel-FoodService.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Hotel-FoodService.aspx.designer.cs">
+      <DependentUpon>Hotel-FoodService.aspx</DependentUpon>
     </Compile>
     <Compile Include="Hotel-RoomService.aspx.cs">
       <DependentUpon>Hotel-RoomService.aspx</DependentUpon>
