Added quantity function in food services

--- a/HotelFoodAndRoomServiceSystem/HotelFoodAndRoomServiceSystem.csproj
+++ b/HotelFoodAndRoomServiceSystem/HotelFoodAndRoomServiceSystem.csproj
@@ -126,6 +126,7 @@
     <Content Include="GuestDashboard.aspx" />
     <Content Include="Hotel-FoodService.aspx" />
     <Content Include="Hotel-RoomService.aspx" />
+    <Content Include="ShoppingCart.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -172,6 +173,13 @@
       <DependentUpon>Hotel-RoomService.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShoppingCart.aspx.cs">
+      <DependentUpon>ShoppingCart.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ShoppingCart.aspx.designer.cs">
+      <DependentUpon>ShoppingCart.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
